--- a/Hold_Snak-2018/src/main/java/client/ClientGUIStart.form
+++ b/Hold_Snak-2018/src/main/java/client/ClientGUIStart.form
@@ -112,6 +112,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextFieldIp">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="51.15.56.53"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
@@ -119,6 +122,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextFieldPort">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="8081"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
@@ -126,6 +132,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextFieldName">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Test1"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel4">
           <Properties>
